--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -591,8 +591,9 @@
 <a href="#" class="scrollup" style="display: none;"><i class="ion-ios-arrow-up"></i></a>
 <!--Added-->
 <!--	<script src="/static/assets/https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
-<script src="/static/assets/js//jquery.magnific-popup.min.js"></script>
-<script src="/static/assets/js//script.js"></script>
+<script src="/static/assets/js/jquery.magnific-popup.min.js"></script>
+<script src="/static/assets/js/script.js"></script>
+<script src="/static/assets/js/jquery.min.js"></script>
 <!--end added-->
 
 
@@ -755,12 +756,12 @@
 <!-- elevateZoom JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.8/jquery.elevatezoom.min.js"></script>
 <script src="C:\Users\SHIVANYA SALES\PycharmProjects\yourjinnie1\static\assets\js\scripts.jsscript.js"></script>
-<script>
-    $(document).ready(function() {
-        // Ensure ajax_magnificPopup is called to set up AJAX functionality
-        ajax_magnificPopup();
-    });
-</script>
+<!--<script>-->
+<!--    $(document).ready(function() {-->
+<!--        // Ensure ajax_magnificPopup is called to set up AJAX functionality-->
+<!--        ajax_magnificPopup();-->
+<!--    });-->
+<!--</script>-->
 
 {% block js %} {% endblock %}
 </body>
