--- a/store/templates/block-printed-bag.html
+++ b/store/templates/block-printed-bag.html
@@ -73,7 +73,7 @@
 														Add To Cart</a></li>
 												<li><a href="javascript:void(0);" class="popup-ajax"><i
 															class="icon-shuffle"></i></a></li>
-												<li><a href="javascript:void(0);" class="popup-ajax"><i
+												<li><a href="{{ p.image.url }}" class="popup-ajax"><i
 															class="icon-magnifier-add"></i></a></li>
 												<li><a href="/wishlist"><i class="icon-heart"></i></a></li>
 											</ul>
@@ -127,7 +127,7 @@
 														Add To Cart</a></li>
 												<li><a href="javascript:void(0);" class="popup-ajax"><i
 															class="icon-shuffle"></i></a></li>
-												<li><a href="javascript:void(0);" class="popup-ajax"><i
+												<li><a href="{{ p.image.url }}" class="popup-ajax"><i
 															class="icon-magnifier-add"></i></a></li>
 												<li><a href="/wishlist"><i class="icon-heart"></i></a></li>
 											</ul>
