--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -85,7 +85,7 @@
                                             </li>
                                             <li><a href="{% url 'compare_products' product.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="#" class="popup-ajax"><i
+                                            <li><a href="{{ product.image.url }}" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' product.pk %}">
                                                 <i class="icon-heart"></i>
@@ -254,7 +254,7 @@
             </div>
             <div class="row">
                 <div class="row">
-                {% for p in products %}
+                {% for p in queryset %}
                 <div class="col-md-3">
                     <div class="product">
                         <div class="product_img"><a href="product-detail.php"> <img
@@ -276,7 +276,7 @@
                                             </li>
                                             <li><a href="{% url 'compare_products' p.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="#" class="popup-ajax"><i
+                                            <li><a href="{{ p.image.url }}" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' p.pk %}">
                                                 <i class="icon-heart"></i>
