--- a/store/templates/product-detail.html
+++ b/store/templates/product-detail.html
@@ -104,7 +104,8 @@
                                 <span class="switch_label">Color</span>
                                 <div class="product_color_switch">
                                     {% for color in colors %}
-                                    <span class="color-option" data-color-id="{{ color.id }}" style="background-color: {{ color.hex_code }}"></span>
+                                    <span class="color-option" data-color-id="{{ color.id }}"
+                                          style="background-color: {{ color.hex_code }}"></span>
                                     {% endfor %}
                                 </div>
                             </div>
@@ -188,7 +189,7 @@
                             </li>
                             <li class="nav-item" role="presentation">
                                 <a class="nav-link" id="Reviews-tab" data-bs-toggle="tab" href="#Reviews" role="tab"
-                                   aria-controls="Reviews" aria-selected="false" tabindex="-1">Reviews (2)</a>
+                                   aria-controls="Reviews" aria-selected="false" tabindex="-1">Reviews ({{ reviews.count }})</a>
                             </li>
                         </ul>
                         <div class="tab-content shop_info_tab">
@@ -224,58 +225,37 @@
                             </div>
                             <div class="tab-pane fade" id="Reviews" role="tabpanel" aria-labelledby="Reviews-tab">
                                 <div class="comments">
-                                    <h5 class="product_tab_title">2 Review For <span>Blue Dress For Woman</span>
-                                    </h5>
+                                    <h5 class="product_tab_title">Review{{ reviews|pluralize }} For
+                                        <span>{{ prods.product_title }}</span></h5>
                                     <ul class="list_none comment_list mt-4">
+                                        {% for review in reviews %}
                                         <li>
                                             <div class="comment_img">
-                                                <img src="/static/assets/images/user1.jpg" alt="user1">
+                                                <img src="#" alt="user{{ forloop.counter }}">
                                             </div>
                                             <div class="comment_block">
                                                 <div class="rating_wrap">
                                                     <div class="rating">
-                                                        <div class="product_rate" style="width:80%"></div>
+                                                        <div class="product_rate"
+                                                             style="width:{{ review.rating|floatformat:0|add:'0' }}0%"></div>
                                                     </div>
                                                 </div>
                                                 <p class="customer_meta">
-                                                    <span class="review_author">Alea Brooks</span>
-                                                    <span class="comment-date">March 5, 2018</span>
+                                                    <span class="review_author">{{ review.name }}</span>
+                                                    <span class="comment-date">{{ review.created_at|date:"F j, Y" }}</span>
                                                 </p>
                                                 <div class="description">
-                                                    <p>Lorem Ipsumin gravida nibh vel velit auctor aliquet. Aenean
-                                                        sollicitudin, lorem quis bibendum auctor, nisi elit
-                                                        consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-                                                        odio sit amet nibh vulputate</p>
+                                                    <p>{{ review.message }}</p>
                                                 </div>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="comment_img">
-                                                <img src="/static/assets/images/user2.jpg" alt="user2">
-                                            </div>
-                                            <div class="comment_block">
-                                                <div class="rating_wrap">
-                                                    <div class="rating">
-                                                        <div class="product_rate" style="width:60%"></div>
-                                                    </div>
-                                                </div>
-                                                <p class="customer_meta">
-                                                    <span class="review_author">Grace Wong</span>
-                                                    <span class="comment-date">June 17, 2018</span>
-                                                </p>
-                                                <div class="description">
-                                                    <p>It is a long established fact that a reader will be
-                                                        distracted by the readable content of a page when looking at
-                                                        its layout. The point of using Lorem Ipsum is that it has a
-                                                        more-or-less normal distribution of letters</p>
-                                                </div>
-                                            </div>
-                                        </li>
+                                        {% endfor %}
                                     </ul>
                                 </div>
                                 <div class="review_form field_form">
                                     <h5>Add a review</h5>
-                                    <form class="row mt-3">
+                                    <form class="row mt-3" method="POST" action="{% url 'product-detail' prods.id %}">
+                                        {% csrf_token %}
                                         <div class="form-group col-12 mb-3">
                                             <div class="star_rating">
                                                 <span data-value="1"><i class="far fa-star"></i></span>
@@ -284,28 +264,29 @@
                                                 <span data-value="4"><i class="far fa-star"></i></span>
                                                 <span data-value="5"><i class="far fa-star"></i></span>
                                             </div>
+                                            <input type="hidden" name="rating" id="rating_input">
                                         </div>
                                         <div class="form-group col-12 mb-3">
-                                                <textarea required="required" placeholder="Your review *"
-                                                          class="form-control" name="message" rows="4"></textarea>
+                                            <textarea required="required" placeholder="Your review *"
+                                                      class="form-control" name="message" rows="4"></textarea>
                                         </div>
                                         <div class="form-group col-md-6 mb-3">
-                                            <input required="required" placeholder="Enter Name *"
-                                                   class="form-control" name="name" type="text">
+                                            <input required="required" placeholder="Enter Name *" class="form-control"
+                                                   name="name" type="text">
                                         </div>
                                         <div class="form-group col-md-6 mb-3">
-                                            <input required="required" placeholder="Enter Email *"
-                                                   class="form-control" name="email" type="email">
+                                            <input required="required" placeholder="Enter Email *" class="form-control"
+                                                   name="email" type="email">
                                         </div>
-
                                         <div class="form-group col-12 mb-3">
-                                            <button type="submit" class="btn btn-fill-out" name="submit"
-                                                    value="Submit">Submit Review
+                                            <button type="submit" class="btn btn-fill-out" name="submit" value="Submit">
+                                                Submit Review
                                             </button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -352,9 +333,9 @@
                                                 <!-- Add this hidden input -->
                                             </form>
                                         </li>
-                                       <li><a href="{% url 'compare_products' p.pk %}"><i
-                                                    class="icon-shuffle"></i></a></li>
-                                        <li><a href="#" class="popup-ajax"><i
+                                        <li><a href="{% url 'compare_products' p.pk %}"><i
+                                                class="icon-shuffle"></i></a></li>
+                                        <li><a href="{{ p.image.url }}" class="popup-ajax"><i
                                                 class="icon-magnifier-add"></i></a></li>
                                         <li><a href="{% url 'add_to_wishlist' p.pk %}">
                                             <i class="icon-heart"></i>
@@ -409,7 +390,7 @@
                         <h3>Popular Products</h3>
                     </div>
                     <div id="related-prod-carousel" class="owl-carousel nav_style1 owl-theme">
-                        {% for item in queryset %}
+                        {% for item in popular_products %}
                         <div class="item">
                             <div class="product">
                                 <div class="product_img"><a href="/product-detail"> <img
@@ -432,7 +413,7 @@
                                             </li>
                                             <li><a href="{% url 'compare_products' item.pk %}"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="#" class="popup-ajax"><i
+                                            <li><a href="{{ item.image.url }}" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
                                             <li><a href="{% url 'add_to_wishlist' item.pk %}">
                                                 <i class="icon-heart"></i></a></li>
@@ -445,7 +426,8 @@
                                     <div class="product_price">
                                         <span class="price">{{item.sale_price|currency}}</span>
                                         <del>{{item.product_price|currency}}</del>
-                                        <div class="on_sale"><span>{{item.product_price|offer_percentage:item.sale_price}}%</span>
+                                        <div class="on_sale">
+                                            <span>{{item.product_price|offer_percentage:item.sale_price}}%</span>
                                         </div>
                                     </div>
                                     <div class="rating_wrap">
@@ -518,6 +500,21 @@
             }
         }
     });
+<!--    For Review-->
+    document.addEventListener("DOMContentLoaded", function () {
+    const stars = document.querySelectorAll('.star_rating span');
+    const ratingInput = document.getElementById('rating_input');
+
+    stars.forEach(star => {
+        star.addEventListener('click', function () {
+            const value = this.getAttribute('data-value');
+            ratingInput.value = value;
+            stars.forEach(s => s.classList.remove('selected'));
+            this.classList.add('selected');
+        });
+    });
+});
+
 </script>
 
 
