--- a/store/templates/my-accounts.html
+++ b/store/templates/my-accounts.html
@@ -88,20 +88,20 @@
                                         </div>
                                         <div class="card-body">
                                             {% if billing_address %}
-                                                <address>
-                                                    {{ billing_address.address_line_1 }}<br>
-                                                    {{ billing_address.address_line_2 }}<br>
-                                                    {{ billing_address.city }}<br>
-                                                    {{ billing_address.state }}<br>
-                                                    {{ billing_address.postal_code }}<br>
-                                                    {{ billing_address.phone }}
-                                                </address>
-                                                <p>{{ billing_address.email }}</p>
+                                            <address>
+                                                {{ billing_address.address_line_1 }}<br>
+                                                {{ billing_address.address_line_2 }}<br>
+                                                {{ billing_address.city }}<br>
+                                                {{ billing_address.state }}<br>
+                                                {{ billing_address.postal_code }}<br>
+                                                {{ billing_address.phone }}
+                                            </address>
+                                            <p>{{ billing_address.email }}</p>
                                             {% else %}
-                                                <p>No billing address provided.</p>
+                                            <p>No billing address provided.</p>
                                             {% endif %}
                                             <button type="button" class="btn btn-fill-out" data-bs-toggle="modal"
-                                                    data-bs-target="#BillingAddress">
+                                                    data-bs-target="#BillingAddressModal">
                                                 Edit
                                             </button>
                                         </div>
@@ -114,20 +114,20 @@
                                         </div>
                                         <div class="card-body">
                                             {% if shipping_address %}
-                                                <address>
-                                                    {{ shipping_address.address_line_1 }}<br>
-                                                    {{ shipping_address.address_line_2 }}<br>
-                                                    {{ shipping_address.city }}<br>
-                                                    {{ shipping_address.state }}<br>
-                                                    {{ shipping_address.postal_code }}<br>
-                                                    {{ shipping_address.phone }}
-                                                </address>
-                                                <p>{{ shipping_address.email }}</p>
+                                            <address>
+                                                {{ shipping_address.address_line_1 }}<br>
+                                                {{ shipping_address.address_line_2 }}<br>
+                                                {{ shipping_address.city }}<br>
+                                                {{ shipping_address.state }}<br>
+                                                {{ shipping_address.postal_code }}<br>
+                                                {{ shipping_address.phone }}
+                                            </address>
+                                            <p>{{ shipping_address.email }}</p>
                                             {% else %}
-                                                <p>No shipping address provided.</p>
+                                            <p>No shipping address provided.</p>
                                             {% endif %}
                                             <button type="button" class="btn btn-fill-out" data-bs-toggle="modal"
-                                                    data-bs-target="#ShippingAddress">
+                                                    data-bs-target="#ShippingAddressModal">
                                                 Edit
                                             </button>
                                         </div>
@@ -135,6 +135,62 @@
                                 </div>
                             </div>
                         </div>
+                        <!--                        <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">-->
+                        <!--                            <div class="row">-->
+                        <!--                                <div class="col-lg-6">-->
+                        <!--                                    <div class="card mb-3 mb-lg-0">-->
+                        <!--                                        <div class="card-header">-->
+                        <!--                                            <h3>Billing Address</h3>-->
+                        <!--                                        </div>-->
+                        <!--                                        <div class="card-body">-->
+                        <!--                                            {% if billing_address %}-->
+                        <!--                                                <address>-->
+                        <!--                                                    {{ billing_address.address_line_1 }}<br>-->
+                        <!--                                                    {{ billing_address.address_line_2 }}<br>-->
+                        <!--                                                    {{ billing_address.city }}<br>-->
+                        <!--                                                    {{ billing_address.state }}<br>-->
+                        <!--                                                    {{ billing_address.postal_code }}<br>-->
+                        <!--                                                    {{ billing_address.phone }}-->
+                        <!--                                                </address>-->
+                        <!--                                                <p>{{ billing_address.email }}</p>-->
+                        <!--                                            {% else %}-->
+                        <!--                                                <p>No billing address provided.</p>-->
+                        <!--                                            {% endif %}-->
+                        <!--                                            <button type="button" class="btn btn-fill-out" data-bs-toggle="modal"-->
+                        <!--                                                    data-bs-target="#BillingAddress">-->
+                        <!--                                                Edit-->
+                        <!--                                            </button>-->
+                        <!--                                        </div>-->
+                        <!--                                    </div>-->
+                        <!--                                </div>-->
+                        <!--                                <div class="col-lg-6">-->
+                        <!--                                    <div class="card">-->
+                        <!--                                        <div class="card-header">-->
+                        <!--                                            <h3>Shipping Address</h3>-->
+                        <!--                                        </div>-->
+                        <!--                                        <div class="card-body">-->
+                        <!--                                            {% if shipping_address %}-->
+                        <!--                                                <address>-->
+                        <!--                                                    {{ shipping_address.address_line_1 }}<br>-->
+                        <!--                                                    {{ shipping_address.address_line_2 }}<br>-->
+                        <!--                                                    {{ shipping_address.city }}<br>-->
+                        <!--                                                    {{ shipping_address.state }}<br>-->
+                        <!--                                                    {{ shipping_address.postal_code }}<br>-->
+                        <!--                                                    {{ shipping_address.phone }}-->
+                        <!--                                                </address>-->
+                        <!--                                                <p>{{ shipping_address.email }}</p>-->
+                        <!--                                            {% else %}-->
+                        <!--                                                <p>No shipping address provided.</p>-->
+                        <!--                                            {% endif %}-->
+                        <!--                                            <button type="button" class="btn btn-fill-out" data-bs-toggle="modal"-->
+                        <!--                                                    data-bs-target="#ShippingAddress">-->
+                        <!--                                                Edit-->
+                        <!--                                            </button>-->
+                        <!--                                        </div>-->
+                        <!--                                    </div>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
                         <div class="tab-pane fade" id="account-detail" role="tabpanel"
                              aria-labelledby="account-detail-tab">
                             <div class="card">
@@ -194,37 +250,99 @@
     </div>
 </div>
 
+<!-- Billing Address Modal -->
+<div class="modal fade" id="BillingAddressModal" tabindex="-1" aria-labelledby="BillingAddressModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="BillingAddressModalLabel">Edit Billing Address</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="{% url 'edit_billing_address' %}">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="billing_address_line_1" class="form-label">Address Line 1</label>
+                        <input type="text" class="form-control" id="billing_address_line_1" name="address_line_1" value="{{ billing_address.address_line_1 }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="billing_address_line_2" class="form-label">Address Line 2</label>
+                        <input type="text" class="form-control" id="billing_address_line_2" name="address_line_2" value="{{ billing_address.address_line_2 }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="billing_city" class="form-label">City</label>
+                        <input type="text" class="form-control" id="billing_city" name="city" value="{{ billing_address.city }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="billing_state" class="form-label">State</label>
+                        <input type="text" class="form-control" id="billing_state" name="state" value="{{ billing_address.state }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="billing_postal_code" class="form-label">Postal Code</label>
+                        <input type="text" class="form-control" id="billing_postal_code" name="postal_code" value="{{ billing_address.postal_code }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="billing_phone" class="form-label">Phone</label>
+                        <input type="text" class="form-control" id="billing_phone" name="phone" value="{{ billing_address.phone }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="billing_email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="billing_email" name="email" value="{{ billing_address.email }}">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Shipping Address Modal -->
+<div class="modal fade" id="ShippingAddressModal" tabindex="-1" aria-labelledby="ShippingAddressModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ShippingAddressModalLabel">Edit Shipping Address</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="{% url 'edit_shipping_address' %}">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="shipping_address_line_1" class="form-label">Address Line 1</label>
+                        <input type="text" class="form-control" id="shipping_address_line_1" name="address_line_1" value="{{ shipping_address.address_line_1 }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shipping_address_line_2" class="form-label">Address Line 2</label>
+                        <input type="text" class="form-control" id="shipping_address_line_2" name="address_line_2" value="{{ shipping_address.address_line_2 }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shipping_city" class="form-label">City</label>
+                        <input type="text" class="form-control" id="shipping_city" name="city" value="{{ shipping_address.city }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shipping_state" class="form-label">State</label>
+                        <input type="text" class="form-control" id="shipping_state" name="state" value="{{ shipping_address.state }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shipping_postal_code" class="form-label">Postal Code</label>
+                        <input type="text" class="form-control" id="shipping_postal_code" name="postal_code" value="{{ shipping_address.postal_code }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shipping_phone" class="form-label">Phone</label>
+                        <input type="text" class="form-control" id="shipping_phone" name="phone" value="{{ shipping_address.phone }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shipping_email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="shipping_email" name="email" value="{{ shipping_address.email }}">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <!--<div class="breadcrumb_section bg_gray page-title-mini">-->
